Closed Bug 1310958 Opened 8 years ago Closed 8 years ago

[EME] MediaKeySession::Load should return error type correctly.

Categories

(Core :: Audio/Video: Playback, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla52
Tracking Status
firefox52 --- fixed

People

(Reporter: kikuo, Unassigned)

References

()

Details

Attachments

(1 file)

According to spec [1], correct the returning error type for MediaKeySession::Load step 1~4. to pass these tests [2] in "org.w3.clearkey test MediaKeySession load() exceptions." case.

Then we may still need to implement certain validation functionality to pass [3], or correct the spec to define a suitable session Id length [4].

[1] https://w3c.github.io/encrypted-media/#dom-mediakeysession-load
[2] https://github.com/w3c/web-platform-tests/blob/master/encrypted-media/scripts/syntax-mediakeysession.js#L88-L99
[3] https://github.com/w3c/web-platform-tests/blob/master/encrypted-media/scripts/syntax-mediakeysession.js#L106-L111
[4] https://github.com/w3c/web-platform-tests/issues/3970#issuecomment-253971381
Attachment #8802044 - Flags: review?(cpearce)
Comment on attachment 8802044 [details]
Bug 1310958 - Reject promise with correct error in MediaKeySession::Load.

https://reviewboard.mozilla.org/r/86596/#review85650

Great, thanks!
Attachment #8802044 - Flags: review?(cpearce) → review+
Pushed by cpearce@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/352cd8e26499
Reject promise with correct error in MediaKeySession::Load. r=cpearce
https://hg.mozilla.org/mozilla-central/rev/352cd8e26499
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla52
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: