Bug 1310958 - Reject promise with correct error in MediaKeySession::Load. r=cpearce

MozReview-Commit-ID: JuWGZCMfW6x